--- a/scss/layout/_sobre-mi.scss
+++ b/scss/layout/_sobre-mi.scss
@@ -45,6 +45,11 @@
     color: $color-4;
     padding: 5px;
     border-radius: 3px;
+    a {
+        text-decoration: none;
+        @include typos ($font-3, 1.0rem, $color-2);
+        font-weight: 500;
+    }
 }
 
 @keyframes vibrarCv { /*** A N I M A C I O N   D E S C A R G A    C V ***/
