--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -30,7 +30,7 @@
 .banner-index {
     grid-column: 1/13;
     grid-row: 1/13;
-    background-image: url(../../assets/img/desktop/foto-index.jpg);
+    background-image: url(../assets/img/desktop/foto-index.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     object-fit: fill;
