--- a/scss/layout/_media-tablet.scss
+++ b/scss/layout/_media-tablet.scss
@@ -21,7 +21,7 @@
     }
 
     .banner-index {
-        background-image: url(../../assets/img/tablet/foto-index-tablet.jpg);
+        background-image: url(../assets/img/tablet/foto-index-tablet.jpg);
     }
     .adam {
         letter-spacing: 1.5rem;
