--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -51,7 +51,7 @@
     /*REGLAS ESPECIALES INDEX - MOBILE*/
     .background__index {
         background-color: $color-3;
-        background-image: url(../../assets/img/mobile/foto-index-mobile.jpg);
+        background-image: url(../assets/img/mobile/foto-index-mobile.jpg);
         object-fit: fill;
         background-size: 100%;
         background-repeat: no-repeat;
