--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "./base/reset";
+@import "./base/rem";
 @import "./utilities/variable";
 @import "./utilities/mixins";
 @import "./layout/body";
