--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -5,7 +5,7 @@ input {
     border: none;
     height: 25px;
     width: 100%;
-    @include typos ($font-3, 1.0rem, $color-1); 
+    @include typos ($font-3, 1.5rem, $color-1); 
     &:focus {
         @include focus-formulario;
     }
@@ -15,7 +15,7 @@ input {
 textarea {
     border: none;
     width: 100%;
-    @include typos ($font-3, 1.0rem, $color-1); 
+    @include typos ($font-3, 1.5rem, $color-1); 
     &:focus {
         @include focus-formulario;
     }
@@ -38,7 +38,7 @@ select {
     @include flex (column,space-evenly);
     align-content: center;
     label {
-        @include typos ($font-3, 1.1rem, $color-1); 
+        @include typos ($font-3, 1.7rem, $color-1); 
     }
 }
 
@@ -50,6 +50,7 @@ select {
 .label-newsletter {
     white-space: nowrap; /*puse esto para que no se me hagan dos renglones, elimina saltos de línea*/
     height: 25px;
+    font-size: 1.5rem;
 }
 
 .checkbox {
@@ -62,7 +63,7 @@ select {
 }
 
 .button-contacto {
-    @include typos ($font-3, 1.0rem, $color-4);
+    @include typos ($font-3, 1.5rem, $color-4);
     background-color: $color-1;
     border: none;
     border-radius: 2px;
